--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ header {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 10px;
+    padding: 8px;
     top: 0;
     background-color: var(--primary-color);
     position: -webkit-sticky;
@@ -30,7 +30,7 @@ header {
 header h1 {
     font-weight: bold;
     margin: auto 0;
-    font-size: 32px;
+    font-size: 30px;
     color: black;
     text-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
     border: 1px solid var(--tertiary-color);
@@ -64,8 +64,31 @@ header nav ul li a {
     text-decoration: underline;
 }
 
-section {
+.hero{
+    background-image: url("../images/header.jpeg");
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: flex-end;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    padding: 50px;
+}
+.hero h2 {
+    margin: auto 0;
+    text-align: center;
+}
 
+.hero p {
+    padding: 8px;
+    margin: auto 0;
+    background: var(--tertiary-color);
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 1px;
+}
+section {
 }
 
 section p {
