--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,125 +8,547 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
-    background: var(--secondary-color);
+    background-color: var(--quinary-color);
     font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+	color: var(--primary-color);
 }
+
+/*header section*/
 
 header {
+	display: flex;
+	justify-content: space-between;
+	background-color: var(--primary-color);
+	padding: 5px 0 10px 0;
+}
+header div {
+	background-color: var(--secondary-color);
+}
+
+header h1 a {
+	font-size: 50px;
+	padding: 0px 10px 0px 100px;
+	color: var(--primary-color);
+	text-decoration: none;
+	letter-spacing: 1px;
+	font-weight: lighter;
+}
+
+nav {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 8px;
-    top: 0;
-    background-color: var(--primary-color);
-    position: -webkit-sticky;
-    position: sticky;
-    z-index: 9999;
-}
-
-header h1 {
-    font-weight: bold;
-    margin: auto 0;
-    font-size: 30px;
-    color: black;
-    text-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-    border: 1px solid var(--tertiary-color);
-    border-radius: 1px;
-    background-color: var(--tertiary-color);
-}
-
-header nav {
-    margin: auto 35px;
+	justify-content: space-between;
+	margin-right: 10px;
 }
 
 header nav ul {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    list-style: none;
+	align-items: center;
 }
 
 header nav ul li {
-margin: 5px;
-background-color: var(--primary-color);
+    list-style: none;
+    margin: 0 5px;
 }
 
-header nav ul li a {
-    padding: 2px;
-    border: 1px solid var(--primary-color);
-    border-radius: 2px;
-    font-size: 16px;
-    font-weight: bold;
-    color: var(--secondary-color);
-    text-decoration: underline;
+header nav a {
+	position: relative;
+	text-decoration: none;
+	color: var(--secondary-color);
+	font-size: 20px;
+	padding: 2px 5px;
+	border-bottom: 3px solid var(--secondary-color);
+	transition: color 0.2s;
 }
 
-.hero{
-    background-image: url("../images/header.jpeg");
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
+.hero {
+	position: relative;
+	/* background-image:  */
+	margin: 0px 0px 0px 0;
+	background-position: center;
+	height: 400px;
+	width: 100%;
+	height: auto;
+	overflow: hidden;
+}
+
+.hero div {
+	position: absolute;
+	float: right;
+	padding: 10px;
+	background-color: var(--secondary-color);
+	width: auto;
+	font-size: 20px;
+	bottom: 20px;
+	right: 10px;
+}
+
+.hero img {
+	width: 100%;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    padding: 50px;
-}
-.hero h2 {
-    margin: auto 0;
-    text-align: center;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    align-items: flex-end;
 }
 
-.hero p {
-    padding: 0px;
-    margin-top: 0;
-    background: var(--tertiary-color);
-    font-size: 20px;
-    font-weight: bold;
-    border-radius: 1px;
+/* main section  */
+main {
+	padding: 10px 50px;
 }
 
-.justice {
-    margin: 5px 5px 5px 5px;
-    padding: 5px;
-    border: 5px solid var(--tertiary-color);
+/* about section  */
+.about-section {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 20px 10px;
+	width: 100%;
+	justify-content: space-between;
+	margin: 5px 0px;
 }
 
-#all-about-me, #contact-info {
-    align-items: center;
-    top: 0;
+.section-title {
+	font-size: 25px;
+	text-align: right;
+	width: 20%;
+	border-right: 5px solid;
+	padding: 10px;
 }
 
-#about-me, #work, #contact {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    padding-bottom: 25px;
-    background-color: var(--secondary-color);
-    border-right: 3px solid var(--primary-color);
-    text-align: center;
-    font-size: 26px;
-    width: 25%;
+.about-section p {
+	margin: 10px;
+	line-height: 2;
 }
 
-.content {
-    flex: 70%;
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-    margin-top: 0;
+.about-section .bio {
+	margin: 10px;
+	width: 75%;
+    font-size: 12px;
+}
+
+/* work section  */
+.work-section {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 20px 10px;
+	width: 100%;
+	justify-content: space-between;
+	margin: 10px 0px;
+}
+
+.projects {
+	width: 75%;
+}
+
+.project-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	width: 100%;
+}
+
+.project-container a {
+	border: 5px solid var(--secondary-color);
+	margin: 10px;
+	overflow: hidden;
+	color: var(--primary-color);
+}
+
+.project-container a {
+	box-shadow: 4px 4px 4px rgb(70, 70, 70);
+}
+
+
+
+
+/* background images */
+
+.run-buddy {
+	background: url("/assets/images/run-buddy.png");
+}
+
+/* project h2 and hover effect */
+.inner-container {
+	position: absolute;
+	bottom: 20px;
+	padding: 5px;
+	border-radius: 0px 10px 0px 0px;
+	background-color: var(--secondary-color);
+	box-shadow: 3px 3px 10px rgb(48, 48, 48);
+}
+.inner-container h3 {
+	font-size: 20px;
+}
+.boxes {
+	position: absolute;
+	content: "";
+	width: 100%;
+	height: 100%;
+	background-color: var(--tertiary-color);
+	top: 0;
+	left: 0;
+	right: 0%;
+	bottom: 0;
+}
+.boxes:hover {
+	background-color: var(--primary-color);
+}
+
+/* projects  */
+.run-buddy {
+	position: relative;
+	width: 100%;
+	height: 500px;
+}
+
+.fav-things,
+.refactor,
+.TBD {
+	position: relative;
+	width: 47%;
+	height: 200px;
+}
+
+/* contact section  */
+
+.contact-section {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 20px 10px;
+	width: 100%;
+	justify-content: space-between;
+	margin: 10px 0px;
+}
+
+footer {
+	display: flex;
+	flex-wrap: wrap;
+	padding: 20px 0px 30px;
+	width: 100%;
+	justify-content: space-between;
+	height: auto;
+}
+
+.footer-links {
+	display: flex;
+	align-items: center;
+	width: 75%;
+	padding: 10px;
+}
+
+.footer-links ul {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+}
+
+.footer-links ul li {
+	list-style: none;
+	padding: 10px 20px;
+}
+
+.footer-links ul li a {
+	position: relative;
+	padding: 5px;
+	text-decoration: none;
+	color: var(--primary-color);
+	border-bottom: 3px solid;
+	z-index: 10;
+	transition: color 0.2s;
+	border-bottom: 3px solid var(--primary-color);
+}
+
+.footer-links ul li a:hover {
+	color: var(--secondary-color);
+}
+
+.footer-links ul li a::before {
+	position: absolute;
+	width: 100%;
+	height: 0%;
+	content: "";
+	left: 0;
+	bottom: 0px;
+	background-color: var(--primary-color);
+	z-index: -10;
+	transition: height 0.2s;
+}
+
+.footer-links ul li a:hover::before {
+	height: 100%;
+	border-radius: 3px;
 } 
 
-#bio, #contact-info{
-    width: 70%;
-    margin-left: auto;
-    margin-top: 5;
+/* media queries for screen sizes */
+/* screen <= 980px  */
+@media screen and (max-width: 980px) {
+	/* Header section  */
+	header h1 a {
+		font-size: 30px;
+		padding-left: 20px;
+	}
+
+	header nav {
+		margin-right: 20px;
+	}
+
+	header nav ul li a {
+		font-size: 16px;
+		border-bottom: 2px solid;
+	}
+	/* Hero section  */
+
+	.hero {
+		width: 100%;
+		height: auto;
+	}
+	.hero div h2 {
+		font-size: 25px;
+	}
+
+	/* main section  */
+	main {
+		padding: 0px 30px;
+	}
+	/* about section  */
+	.section-title {
+		font-size: 25px;
+		width: 20%;
+		border-width: 3px;
+		padding: 5px;
+	}
+
+	.about-section h2 {
+		font-size: 30px;
+	}
+
+	.about-section .bio {
+		margin: 10px;
+		width: 75%;
+		line-height: 1.5;
+	}
+
+	/* work section  */
+	.work-section h2 {
+		font-size: 30px;
+	}
+
+	.project-container {
+		border-width: 1px;
+	}
+
+	.fav-things,
+	.refactor,
+	.TBD  {
+		border: 2px solid;
+	}
+
+	.run-buddy {
+		width: 100%;
+		height: 250px;
+		background-position: center bottom;
+	}
+
+	.fav-things,
+	.refactor,
+	.TBD  {
+		width: 45%;
+		height: 200px;
+		background-position: center;
+		background-size: cover;
+	}
+
+	/* contact section  */
+	footer {
+		margin: 30px 0px;
+	}
+
+	footer h2 {
+		font-size: 30px;
+	}
+
+	.footer-links ul {
+		flex-direction: row;
+	}
+
+	.footer-links ul li {
+		flex-wrap: wrap;
+		padding: 10px;
+	}
 }
-    
+
+@media screen and (max-width: 768px) {
+	/* header section  */
+	header {
+		flex-direction: column;
+		align-items: center;
+		padding: 0;
+	}
+
+	header div {
+		align-self: start;
+	}
+
+	nav {
+		margin: 10px;
+	}
+
+	header h1 {
+		font-size: 25px;
+	}
+	/* hero section  */
+
+	.hero {
+		margin: 0px 0px 0px 0;
+		position: relative;
+	}
+
+	.hero div {
+		float: right;
+		position: right;
+		justify-content: flex-end;
+		bottom: 10px;
+		opacity: 0.8;
+		text-align: center;
+		max-width: 30%;
+	}
+
+	.hero img {
+		width: 100%;
+		display: flex;
+	}
+
+	.hero div h2 {
+		font-size: 20px;
+		color: var(--primary-color), 1;
+	}
+
+	/* main section  */
+	main {
+		margin: 0;
+		padding: 0;
+	}
+
+	/* about section  */
+	section {
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	.hero,
+	footer,
+	.work-section {
+		padding: 10px;
+	}
+
+	.section-title {
+		width: auto;
+		text-align: left;
+		border-bottom: 2px solid;
+		border-right: none;
+	}
+
+	.about-section,
+	.work-section,
+	footer {
+		align-items: center;
+		padding: 0;
+		margin: 30px 0px;
+	}
+
+	.section-title h2 {
+		text-align: center;
+	}
+
+	.bio {
+		text-align: center;
+		padding: 0;
+		margin: 0;
+	}
+
+	.about-section p {
+		margin: 0;
+		padding: 10px 0px;
+		line-height: 1.5;
+	}
+
+	/* work section  */
+	.project-frame img {
+		width: 100%;
+	}
+
+	.run-buddy {
+		height: 150px;
+	}
+
+	.fav-things,
+	.refactor,
+	.TBD  {
+		height: 100px;
+	}
+
+	/* contact me section  */
+	footer {
+		text-align: center;
+		flex-direction: column;
+		padding: 0;
+		margin: 0;
+	}
+
+	.footer-links {
+		width: 100%;
+	}
+
+	.footer-links li {
+		padding: 5px;
+	}
+
+	.footer-links a {
+		padding: 0;
+	}
+
+	footer .section-title {
+		text-align: center;
+	}
+}
+
+@media screen and (max-width: 575px) {
+	/* header section  */
+	nav {
+		width: 80vw;
+	}
+
+	nav ul {
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
+	nav ul li {
+		padding: 3px;
+	}
+
+	/* hero section  */
+
+	/* about section  */
+	.about-section p {
+		line-height: 1;
+	}
+
+	/* work section  */
+	.project-container a {
+		width: 100%;
+		padding: 0;
+	}
+
+	.run-buddy {
+		height: 100px;
+	}
+
+	.fav-things,
+	.refactor,
+	.TBD  {
+		height: 100px;
+	}
+}
