--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,6 +233,7 @@ a:hover::before {
 
 .beer-me,
 .refactor,
+.tipsyTech,
 .TBD {
 	position: relative;
 	width: 47%;
@@ -365,6 +366,7 @@ footer {
 
 	.beer-me,
 	.refactor,
+	.tipsyTech,
 	.TBD  {
 		border: 2px solid;
 	}
@@ -377,6 +379,7 @@ footer {
 
 	.beer-me,
 	.refactor,
+	.tipsyTech,
 	.TBD  {
 		width: 45%;
 		height: 200px;
@@ -506,6 +509,7 @@ footer {
 
 	.beer-me,
 	.refactor,
+	.tipsyTech,
 	.TBD  {
 		height: 100px;
 	}
@@ -577,6 +581,7 @@ footer {
 
 	.beer-me,
 	.refactor,
+	.tipsyTech,
 	.TBD  {
 		height: 100px;
 	}
